--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Roll no:323103310061
 <br>
 <br>
 <h2>My Pic</h2>
-<img src="C:\Users\abdul\Documents\bunny_ooty.jpg"
+<img src="bunny_ooty.jpg"
 height="250" width="500">
 </body>
 </html>
