--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@ Roll no:323103310061
 <h2>My Pic</h2>
 <img src="bunny_ooty.jpg"
 height="250" width="500">
+<img src="shahrukhkhan.jpg"
+height="250" width="500">
 </body>
 </html>
