--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@ Roll no:323103310061
 height="250" width="500">
 <img src="shahrukhkhan.jpg"
 height="250" width="500">
+<img src="Baba.jpg"
+height="250" width="500">
 </body>
 </html>
