--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@ Roll no:323103310061
 <h2>My Pic</h2>
 <img src="bunny_ooty.jpg"
 height="250" width="500">
-<img src="shahrukhkhan.jpg"
-height="250" width="500">
 <img src="DDLJ.avif"
 height="250" width="500">
+<br>
+<hr>
+<p1>My Dad<p1>
+<img src="ABBA.jpg"
+height="250" width="500"
 </body>
 </html>
