--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@ height="250" width="500">
 <img src="DDLJ.avif"
 height="250" width="500">
 <br>
+<br><br>
 <hr>
-<p1>My Dad<p1>
+<h1><centre>My Dad</centre><h1>
 <img src="ABBA.jpg"
 height="250" width="500"
 </body>
