--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
+<link rel="icon" type="image.jpg" href="black.jpg">
 <title>About Me</title>
 </head>
 <body>
 <b>Assalamualaikum!!!</b>
 <hr>
 <br>
-<link rel="icon" type="image/jpg" href="black.jpg">
 Name   :Baba Fakruddin
 <br>
 <br>
