--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
 <html>
 <head>
 <link rel="icon" type="image.jpg" href="black.jpg">
-<title>About Me</title>
+<style>
+	body {
+ 		background-image: url(eagle.jpg);
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-attachment: fixed;
+	}
+</style>
+<title><About Me</title>
 </head>
 <body>
-<b>Assalamualaikum!!!</b>
+<b style="color:yellow">Assalamualaikum!!!</b>
 <hr>
 <br>
-Name   :Baba Fakruddin
+<i>Name   :Baba Fakruddin</i>
 <br>
 <br>
-Branch :CSE-1
+<i>Branch :CSE-1</i>
 <br>
 <br>
-Roll no:323103310061
+<i>Roll no:323103310061</i>
 <br>
 <br>
-<h2>My Pic</h2>
+<h2><b>My Pic</b></h2>
 <img src="bunny_ooty.jpg"
 height="250" width="500">
 <img src="DDLJ.avif"
@@ -24,8 +32,8 @@ height="250" width="500">
 <br>
 <br><br>
 <hr>
-<h1><centre>My Dad</centre><h1>
+<h1><centre><b>My Dad</b></centre><h1>
 <img src="ABBA.jpg"
-height="250" width="500"
+height="300" width="500"
 </body>
 </html>
