--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="icon" type="image.jpg" href="black.jpg">
 <style>
 	body {
- 		background-image: url(eagle.jpg);
+ 		background-image: url(earth.jpg);
 		background-size: cover;
 		background-repeat: no-repeat;
 		background-attachment: fixed;
@@ -34,7 +34,9 @@ height="250" width="500">
 <hr>
 <h1><centre><b>My Dad</b></centre><h1>
 <img src="ABBA.jpg"
-height="300" width="500"
-<iframe width="560" height="315" src="https://www.youtube.com/embed/pcd-_Pva7T4?si=evhbfT_3IrTLGfEf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+height="300" width="500">
+	<br>
+	<br>
+<i>My video</i><a href="https://youtu.be/pcd-_Pva7T4?si=C7ItcWcriz0S5Fc1" Click here</a><br>
 </body>
 </html>
