--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="icon" type="image.jpg" href="black.jpg">
 <style>
 	body {
- 		background-image: url(earth.jpg);
+ 		background-image: url(eagle.jpg);
 		background-size: cover;
 		background-repeat: no-repeat;
 		background-attachment: fixed;
