--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		background-size: cover;
 		background-repeat: no-repeat;
 		background-attachment: fixed;
+		background-color: yellow;
 	}
 </style>
 <title><About Me</title>
@@ -37,6 +38,6 @@ height="250" width="500">
 height="300" width="500">
 	<br>
 	<br>
-<i>My video</i><a href="https://youtu.be/pcd-_Pva7T4?si=C7ItcWcriz0S5Fc1" Click here</a><br>
+<i>My video</i> <a href="https://youtu.be/pcd-_Pva7T4?si=C7ItcWcriz0S5Fc1" Click here</a><br>
 </body>
 </html>
