--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <link rel="icon" type="image.jpg" href="black.jpg">
 <style>
 	body {
- 		background-image: url(eagle.jpg);
 		background-size: cover;
 		background-repeat: no-repeat;
 		background-attachment: fixed;
-		background-color: yellow;
 	}
 </style>
 <title><About Me</title>
@@ -38,6 +36,7 @@ height="250" width="500">
 height="300" width="500">
 	<br>
 	<br>
-<i>My video</i> <a href="https://youtu.be/pcd-_Pva7T4?si=C7ItcWcriz0S5Fc1" Click here</a><br>
+<i>My video</i> <a href="https://youtu.be/pcd-_Pva7T4?si=C7ItcWcriz0S5Fc1" Click here</a>
+<br>
 </body>
 </html>
