--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ height="250" width="500">
 height="300" width="500">
 	<br>
 	<br>
-<i>My video</i> <a href="https://youtu.be/pcd-_Pva7T4?si=C7ItcWcriz0S5Fc1" Click here</a>
+<i>My video</i> <a href="https://youtu.be/pcd-_Pva7T4?si=C7ItcWcriz0S5Fc1"> Click here</a>
 <br>
 </body>
 </html>
