--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ height="250" width="500">
 height="300" width="500">
 	<br>
 	<br>
-<i>My video</i> <a href="https://youtu.be/pcd-_Pva7T4?si=C7ItcWcriz0S5Fc1"> Click here</a>
+<i>My video</i> <iframe width="560" height="315" src="https://www.youtube.com/embed/pcd-_Pva7T4?si=RSEMjftNeGofjkDA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br>
 </body>
 </html>
