--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="icon" type="image.jpg" href="black.jpg">
 <style>
 	body {
- 		background-image: url(eagle.jpg);
+ 		background-image: url(earth.jpg);
 		background-size: cover;
 		background-repeat: no-repeat;
 		background-attachment: fixed;
@@ -35,5 +35,12 @@ height="250" width="500">
 <h1><centre><b>My Dad</b></centre><h1>
 <img src="ABBA.jpg"
 height="300" width="500"
+<img src="vizag1.jpeg"
+height="300" width="500"
+<img src="vizag2.jpeg"
+height="300" width="500"
+<img src="vizag3.jpeg"
+height="300" width="500"
+<iframe width="560" height="315" src="https://www.youtube.com/embed/pcd-_Pva7T4?si=jqL0XN4wcb_Rzfk3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
